demo/namespaces/checkoutservice-netpol.yaml
#Network policy to ALLOW traffic TO checkoutservice FROM frontend on PORT 5050
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-allow-frontend
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    # ports:
    #   - port: 5050
