demo/namespaces/currencyservice-netpol.yaml
#Network policy to ALLOW traffic TO currencyservice FROM frontend on PORT 7000
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice-allow-frontend
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    # ports:
    #   - port: 7000

---
#Network policy to ALLOW traffic TO currencyservice FROM checkoutservice on PORT 7000
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice-allow-checkoutservice
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    # ports:
    #   - port: 7000
