demo/namespaces/denyall-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace:
  # namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
