demo/namespaces/emailservice-netpol.yaml
#Network policy to ALLOW traffic TO emailservice FROM checkoutservice on PORT 5050
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice-allow-checkoutservice
spec:
  podSelector:
    matchLabels:
      app: emailservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    # ports:
    #   - port: 5050
