demo/namespaces/emailsvc.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: emailservice-network-policy
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
