demo/namespaces/frontend-netpol.yaml
#Network policy to ALLOW traffic TO frontend FROM internet (everywhere) on PORT 80
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - {}
  ports:
    - port: 80
