demo/namespaces/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: checkoutservice-network-policy
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: emailservice
    - podSelector:
        matchLabels:
          app: paymentservice
    - podSelector:
        matchLabels:
          app: shippingservice
    - podSelector:
        matchLabels:
          app: cartservice
