demo/namespaces/paymentservice-netpol.yaml
##Network policy to ALLOW traffic TO paymentservice FROM checkoutservice on PORT 50051
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paymentservice-allow-checkoutservice
spec:
  podSelector:
    matchLabels:
      app: paymentservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    # ports:
    #   - port: 50051
