demo/namespaces/recommendationservice-netpol.yaml
#Network policy to ALLOW traffic TO recommendationservice FROM frontend on PORT 8080
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendationservice-allow-frontend
spec:
  podSelector:
    matchLabels:
      app: recommendationservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    # ports:
    #   - port: 8080
