demo/namespaces/rediscartservice-netpol.yaml
#Network policy to ALLOW traffic TO rediscart FROM cartservice on PORT 6379
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rediscart-allow-cartservice
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice
    # ports:
    #   - port: 6379
